added responsiveness to about page

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -206,7 +206,7 @@ main#home h1 {
 
 .about-info {
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 2rem;
   grid-template-areas: "bioimage bio bio" "skill-1 skill-2 skill-3";
   grid-template-columns: repeat(3, 1fr);
 }
@@ -372,6 +372,13 @@ main#home h1 {
   .about-info {
     grid-template-areas: "bioimage" "bio" "skill-2" "skill-3" "skill-1";
     grid-template-columns: 1fr;
+  }
+  img.bio-image {
+    width: 17rem;
+    align-items: center;
+  }
+  .about-info .bio {
+    width: 20rem;
   }
   .projects {
     grid-template-columns: repeat(2, 1fr);
