adjusted video sizing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -240,6 +240,29 @@ main#home h1 {
   padding: 0.5rem;
 }
 
+.video {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+.video iframe,
+.video object,
+.video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video-wrapper {
+  width: 600px;
+  max-width: 100%;
+}
+
 .progress-bar {
   color: #000;
 }
